Fix scrollbars. Attempt #5

--- a/src/App.scss
+++ b/src/App.scss
@@ -333,6 +333,13 @@ body {
   .modal-content {
     height: 100%;
     overflow: scroll;
+    
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;
+
+    ::-webkit-scrollbar {
+      display: none;
+    }
 
     .title {
       font-family: 'DancingScript';
